--- a/public/index.html
+++ b/public/index.html
@@ -15,37 +15,28 @@
  <p >Price: <strong class="detailPrice"></strong></p>
  <p >Availability: <strong class="detailAvail"></strong></p>
  </div>
- 
- <!-- firebase sdk link goes here -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.2.2/firebase-app.min.js"></script>
- <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-database.js"></script>
- <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
+
+  <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-database.js"></script>
+  <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyCzSw2RqMAzxT8nxmzGbca_n-OaoSzSj5U",
-      authDomain: "food2go-56aac.firebaseapp.com",
-      databaseURL: "https://food2go-56aac-default-rtdb.firebaseio.com",
-      projectId: "food2go-56aac",
-      storageBucket: "food2go-56aac.appspot.com",
-      messagingSenderId: "912146962405",
-      appId: "1:912146962405:web:ba727c4ba777ab82ce410c",
-      measurementId: "G-SMDE1KW84D"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.2.2/firebase-app.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCzSw2RqMAzxT8nxmzGbca_n-OaoSzSj5U",
+    authDomain: "food2go-56aac.firebaseapp.com",
+    databaseURL: "https://food2go-56aac-default-rtdb.firebaseio.com",
+    projectId: "food2go-56aac",
+    storageBucket: "food2go-56aac.appspot.com",
+    messagingSenderId: "912146962405",
+    appId: "1:912146962405:web:ba727c4ba777ab82ce410c",
+    measurementId: "G-SMDE1KW84D"
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
   <script src="app.js"></script>
  </body>
 </html>
