Address empty string edge case

--- a/public/create_customer.html
+++ b/public/create_customer.html
@@ -101,7 +101,7 @@ li a:hover {
   <fieldset>
    <legend>Create New Account</legend>
     <p>
-    <label>Name: <input type="name" id="name"
+    <label>Name: <input type="text" id="name"
      placeholder="Enter your name to be used in the service" /></label>
    </p>  
    <p>
