--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,7 @@
  </head>
  <body>
     <h1>Food2Go Web App<br/><small><em>Serving Deliciousness</em></small></h1>
-    
-    <ul class="foodList"></ul>
-    <div class="foodDetail">
-    <p >Name :<strong class="detailName"></strong></p>
-    <p >Description: <strong class="detailDesc"></strong></p>
-    <p >Price: <strong class="detailPrice"></strong></p>
-    <p >Availability: <strong class="detailAvail"></strong></p>
-    </div>
+    <div id="foodListDiv"></div>
     <script src="app.js"></script>
  </body>
 </html>
