renamed "app.js" in menu.html to menu.js

--- a/public/menu.html
+++ b/public/menu.html
@@ -8,6 +8,6 @@
  <body>
     <h1>Food2Go Web App<br/><small><em>Serving Deliciousness</em></small></h1>
     <div id="foodListDiv"></div>
-    <script src="app.js"></script>
+    <script src="menu.js"></script>
  </body>
 </html>
