Fixed "failed to fetch" issue!

--- a/public/login.html
+++ b/public/login.html
@@ -97,7 +97,7 @@ li a:hover {
   </div>
 
   <div>
-  <form id="loginform" method="post" action="#" onreset="resetFields()">
+  <form id="loginform" method="post" action="#">
   <fieldset>
    <legend>Login</legend>
    <p>
